--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "optimize-images": "npx sharp-cli --input './public/images/**/*.{jpg,png}' --output './public/images/optimized/' --format webp --quality 80",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,5 +16,9 @@
   "description": "",
   "dependencies": {
     "astro": "^5.5.6"
+  },
+  "devDependencies": {
+    "sharp": "^0.33.5",
+    "sharp-cli": "^4.2.0"
   }
 }
